# BUCEANet-AutoLogin

./: .gitattributes  .gitignore  .npmrc  .puppeteerrc.cjs  README.md  app.js  config.js  package.json  pnpm-lock.yaml  pyproject.toml
service/: install.js  uninstall.js
src/buceanet_autologin/: __init__.py  app.py  portal.py  runtime.py  service.py  startup.py
typings/: pywintypes.pyi  servicemanager.pyi  win32service.pyi  win32serviceutil.pyi
utils/: autoLogin.js  logger.js
